--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,8 @@ erl_crash.dump
 
 # Also ignore archive artifacts (built via "mix archive.build").
 *.ez
+
+# Ignore env-specific config files
+config/dev.exs
+config/test.exs
+config/prod.exs
